--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
+    "firebase": "^10.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
