--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.0",
+    "react-slick": "^0.29.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
