--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
+    "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.18",
     "@smastrom/react-rating": "^1.3.2",
     "aos": "^2.3.4",
