--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "flowbite-react": "^0.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
