--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
+    "recharts": "^2.10.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
