--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.18",
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
